--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,29 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
+  <div class="hearder">
+    <h1>Daniel Leung</h1>
+    <h2>Chief Fintect Officer and Business Developement Director</h2>
+    <div class="tagline">
+      <h3>Learn more about Daniel</h3>
+      <p>I link hiking and aspired to be a all round fintech professional
+      </p>
+    </div>
+    <div class="skills">
+      <h3>my skills</h3>
+      <p>I enjoy writing front-end code with these technologies</p>
+      <ul>
+        <li>HTML</li>
+        <li>javascript</li>
+        <li>Hyperledger Fabric</li>
+      </ul>
+    </div>
+    <div class="contact">
+      <h3>drop me a line</h3>
+      <p>Please send me <a href="mailto:daniel.leung2005@gmail.com">email</a></p>
+    </div>
 
-  Welcome to the HTML Portfolio Project
-  Hellom, my name is Daniel
+  </div>
 
 </body>
 </html>
