--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
-  <div class="hearder">
+  <div class="header">
     <h1>Daniel Leung</h1>
     <h2>Chief Fintect Officer and Business Developement Director</h2>
     <div class="tagline">
