--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <h2>Chief Fintect Officer and Business Developement Director</h2>
     <div class="tagline">
       <h3>Learn more about Daniel</h3>
-      <p>I link hiking and aspired to be a all round fintech professional
+      <p>I like hiking and aspired to be an all rounded fintech professional
       </p>
     </div>
     <div class="skills">
@@ -27,6 +27,7 @@
     <div class="contact">
       <h3>drop me a line</h3>
       <p>Please send me <a href="mailto:daniel.leung2005@gmail.com">email</a></p>
+//      <p><a href="test.html">Others</a></p>
     </div>
 
   </div>
