--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
     <div class="contact">
       <h3>drop me a line</h3>
       <p>Please send me <a href="mailto:daniel.leung2005@gmail.com">email</a></p>
-//      <p><a href="test.html">Others</a></p>
+<!--      <p><a href="test.html">Others</a></p> -->
     </div>
 
   </div>
