update one more time

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="header">
     <h1>Daniel Leung</h1>
-    <h2>Chief Fintect Officer and Business Developement Director</h2>
+    <h2>Chief Fintech Officer and Business Developement Director</h2>
     <div class="tagline">
       <h3>Learn more about Daniel</h3>
       <p>I like hiking and aspired to be an all rounded fintech professional
@@ -27,7 +27,7 @@
     <div class="contact">
       <h3>drop me a line</h3>
       <p>Please send me <a href="mailto:daniel.leung2005@gmail.com">email</a></p>
-<!--      <p><a href="test.html">Others</a></p> -->
+      <p><a href="test.html">Others</a></p>
     </div>
 
   </div>
