--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="header">
     <h1>Daniel Leung</h1>
-    <h2>Chief Fintect Officer and Business Developement Director</h2>
+    <h2>Chief Fintech Officer and Business Developement Director</h2>
     <div class="tagline">
       <h3>Learn more about Daniel</h3>
       <p>I link hiking and aspired to be a all round fintech professional
