--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h2>Chief Fintech Officer and Business Developement Director</h2>
     <div class="tagline">
       <h3>Learn more about Daniel</h3>
-      <p>I link hiking and aspired to be a all round fintech professional
+      <p>I like hiking and aspired to be a all round fintech professional
       </p>
     </div>
     <div class="skills">
